--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   "homepage": "https://github.com/Souvikns/gibit#readme",
   "dependencies": {
     "@octokit/core": "^3.5.1",
+    "@primer/components": "^29.1.1",
     "next": "^11.1.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "jest": "^27.2.2"
