--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@octokit/core": "^3.5.1",
     "@primer/components": "^29.1.1",
+    "@primer/octicons-react": "^15.2.0",
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
