--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
-    "jest": "^27.2.2"
+    "@babel/preset-env": "^7.15.6",
+    "babel-jest": "^27.2.4",
+    "jest": "^27.2.2",
+    "ts-jest": "^27.0.5"
   }
 }
