--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.15.6",
+    "autoprefixer": "^10.3.6",
     "babel-jest": "^27.2.4",
     "jest": "^27.2.2",
+    "postcss": "^8.3.8",
+    "tailwindcss": "^2.2.16",
     "ts-jest": "^27.0.5"
   }
 }
