--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "./src/index.js",
   "dependencies": {
     "@craco/craco": "^5.9.0",
+    "@octokit/core": "^3.5.1",
+    "@octokit/rest": "^18.11.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.22.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
